layout issues, new SDK calls

--- a/src/visualizer/VisualizerTools.scss
+++ b/src/visualizer/VisualizerTools.scss
@@ -1,9 +1,14 @@
 .visualizerTools {
-  position: fixed;
+  position: absolute;
   top:10px;
   right:20px;
   z-index: 1;
 
+  display: flex;
+  flex-direction: column;
+}
+
+.visualizerToolsButtons {
   display: flex;
   flex-direction: column;
 }
